# 2022_New_airbnb_clone

./: README.md  pyproject.toml
bookings/: admin.py  models.py  serializer.py
bookings/migrations/: 0001_initial.py  0002_rename_exprience_time_booking_experience_time.py  0003_alter_booking_experience_alter_booking_room_and_more.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py  0003_alter_category_kind.py  0004_alter_category_kind.py  0005_alter_category_kind.py
common/: models.py
config/: authentication.py  settings.py  urls.py
direct_messages/: admin.py  apps.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_message_room_and_more.py
experiences/: admin.py  urls.py  views.py
experiences/migrations/: 0001_initial.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_house_pets_allowed.py  0002_initial.py  0003_rename_adress_house_address.py
medias/: admin.py  models.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room_and_more.py  0003_alter_photo_file_alter_video_file.py
reviews/: admin.py  models.py  serializers.py
reviews/migrations/: 0001_initial.py
rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_room_name_alter_amenity_desription.py  0004_room_category.py  (+3 more)
users/: admin.py  models.py  serializers.py  views.py
wishlists/: admin.py  models.py  serializers.py  views.py
(+6 files in other folders)
