[tool.poetry]
name = "2022-new-django"
version = "0.1.0"
description = ""
authors = ["yeardeam <gorani_6@naver.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "2022_new_django"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
